==> wenhuafeng/stm32l051k8t6_oled_clock/source/user/oled/ssd1306.c <==
#include "main.h"
#include "ssd1306.h"
#include <stdint.h>
#include <string.h>
#include <stdbool.h>
#include "ssd1306_iic.h"
#define TAG_LOG "ssd1306"
#define ABS(x) ((x) > 0 ? (x) : -(x))
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              0x26
#define SSD1306_LEFT_HORIZONTAL_SCROLL               0x27
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 0x29
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  0x2A
#define SSD1306_DEACTIVATE_SCROLL                    0x2E // Stop scroll
#define SSD1306_ACTIVATE_SCROLL                      0x2F // Start scroll
#define SSD1306_SET_VERTICAL_SCROLL_AREA             0xA3 // Set scroll range
#define SSD1306_NORMALDISPLAY 0xA6
#define SSD1306_INVERTDISPLAY 0xA7

static void SSD1306_WriteCommand(uint8_t cmd)
{
    uint8_t dt[2];

    dt[0] = 0x00;
    dt[1] = cmd;
    if (HAL_I2C_Master_Transmit(&hi2c1, SSD1306_I2C_ADDR, dt, 2, 100) != HAL_OK) {
        LOGE(TAG_LOG, "ssd1306 write command error!\r\n");
    }
}

static void ssd1306_WriteData(uint8_t in)
{
    uint8_t dt[2];

    dt[0] = 0x40;
    dt[1] = in;
    if (HAL_I2C_Master_Transmit(&hi2c1, SSD1306_I2C_ADDR, dt, 2, 10) != HAL_OK) {
        LOGE(TAG_LOG, "ssd1306 write data error!\r\n");
    }
}

void SSD1306_DrawPixel(uint16_t x, uint16_t y, enum Ssd1306ColorType color)
{
    if (x >= SSD1306_WIDTH || y >= SSD1306_HEIGHT) {
        /* Error */
        return;
    }

    /* Check if pixels are inverted */
    if (g_ssd1306.inverted) {
        color = (enum Ssd1306ColorType) !color;
    }

    /* Set color */
    if (color == SSD1306_COLOR_WHITE) {
        g_ssd1306Buffer[x + (y / 8) * SSD1306_WIDTH] |= 1 << (y % 8);
    } else {
        g_ssd1306Buffer[x + (y / 8) * SSD1306_WIDTH] &= ~(1 << (y % 8));
    }
}

void SSD1306_Fill(enum Ssd1306ColorType color)
{
    /* Set memory */
    memset(g_ssd1306Buffer, (color == SSD1306_COLOR_BLACK) ? 0x00 : 0xFF, sizeof(g_ssd1306Buffer));
}

void SSD1306_UpdateScreen(void)
{
    uint8_t m;

    for (m = 0; m < 8; m++) {
        SSD1306_WriteCommand(0xB0 + m);
        SSD1306_WriteCommand(0x00);
        SSD1306_WriteCommand(0x10);

        /* Write multi data */
        SSD1306_I2C_WriteMulti(0x40, &g_ssd1306Buffer[SSD1306_WIDTH * m], SSD1306_WIDTH);
    }
}

bool SSD1306_Init(void)
{
    /* Init I2C */
    SSD1306_I2C_Init();

    /* Check if LCD connected to I2C */
    //if (HAL_I2C_IsDeviceReady(&hi2c1, SSD1306_I2C_ADDR, 1, 20000) != HAL_OK) {
    //    /* Return false */
    //    return false;
    //}

    /* A little delay */
    uint16_t p = 25000;
    while (p > 0) {
        p--;
    }

    /* Init LCD */
    SSD1306_WriteCommand(0xAE); // display off
    SSD1306_WriteCommand(0x20); // Set Memory Addressing Mode
    SSD1306_WriteCommand(0x10); // 00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
    SSD1306_WriteCommand(0xB0); // Set Page Start Address for Page Addressing Mode,0-7
    SSD1306_WriteCommand(0xC8); // Set COM Output Scan Direction
    SSD1306_WriteCommand(0x00); // ---set low column address
    SSD1306_WriteCommand(0x10); // ---set high column address
    SSD1306_WriteCommand(0x40); // --set start line address
    SSD1306_WriteCommand(0x81); // --set contrast control register
    SSD1306_WriteCommand(0xFF);
    SSD1306_WriteCommand(0xA1); // --set segment re-map 0 to 127
    SSD1306_WriteCommand(0xA6); // --set normal display
    SSD1306_WriteCommand(0xA8); // --set multiplex ratio(1 to 64)
    SSD1306_WriteCommand(0x3F); //
    SSD1306_WriteCommand(0xA4); // 0xa4,Output follows RAM content;0xa5,Output ignores RAM content
    SSD1306_WriteCommand(0xD3); // -set display offset
    SSD1306_WriteCommand(0x00); // -not offset
    SSD1306_WriteCommand(0xD5); // --set display clock divide ratio/oscillator frequency
    SSD1306_WriteCommand(0xF0); // --set divide ratio
    SSD1306_WriteCommand(0xD9); // --set pre-charge period
    SSD1306_WriteCommand(0x22); //
    SSD1306_WriteCommand(0xDA); // --set com pins hardware configuration
    SSD1306_WriteCommand(0x12);
    SSD1306_WriteCommand(0xDB); // --set vcomh
    SSD1306_WriteCommand(0x20); // 0x20,0.77xVcc
    SSD1306_WriteCommand(0x8D); // --set DC-DC enable
    SSD1306_WriteCommand(0x14);
    SSD1306_WriteCommand(0xAF); // --turn on g_ssd1306 panel

    SSD1306_WriteCommand(SSD1306_DEACTIVATE_SCROLL);

    /* Clear screen */
    SSD1306_Fill(SSD1306_COLOR_BLACK);

    /* Update screen */
    SSD1306_UpdateScreen();

    /* Set default values */
    g_ssd1306.currentX = 0;
    g_ssd1306.currentY = 0;

    /* initialized OK */
    g_ssd1306.initialized = 1;

    /* Return OK */
    return true;
}

void SSD1306_ToggleInvert(void)
{
    uint16_t i;

    /* Toggle invert */
    g_ssd1306.inverted = !g_ssd1306.inverted;

    /* Do memory toggle */
    for (i = 0; i < sizeof(g_ssd1306Buffer); i++) {
        g_ssd1306Buffer[i] = ~g_ssd1306Buffer[i];
    }
}

void SSD1306_GotoXY(uint16_t x, uint16_t y)
{
    /* Set write pointers */
    g_ssd1306.currentX = x;
    g_ssd1306.currentY = y;
}

char SSD1306_Putc(char ch, struct FontDefineType *font, enum Ssd1306ColorType color)
{
    uint32_t i, b, j;

    /* Check available space in LCD */
    if (SSD1306_WIDTH <= (g_ssd1306.currentX + font->fontWidth) ||
        SSD1306_HEIGHT <= (g_ssd1306.currentY + font->fontHeight)) {
        /* Error */
        return 0;
    }

    /* Go through font */
    for (i = 0; i < font->fontHeight; i++) {
        b = font->data[(ch - 32) * font->fontHeight + i];
        for (j = 0; j < font->fontWidth; j++) {
            if ((b << j) & 0x8000) {
                SSD1306_DrawPixel(g_ssd1306.currentX + j, (g_ssd1306.currentY + i), (enum Ssd1306ColorType)color);
            } else {
                SSD1306_DrawPixel(g_ssd1306.currentX + j, (g_ssd1306.currentY + i), (enum Ssd1306ColorType) !color);
            }
        }
    }

    /* Increase pointer */
    g_ssd1306.currentX += font->fontWidth;

    /* Return character written */
    return ch;
}

void SSD1306_DrawCircle(int16_t x0, int16_t y0, int16_t r, enum Ssd1306ColorType color)
{
    int16_t f    = 1 - r;
    int16_t ddfX = 1;
    int16_t ddfY = -2 * r;
    int16_t x    = 0;
    int16_t y    = r;

    SSD1306_DrawPixel(x0, y0 + r, color);
    SSD1306_DrawPixel(x0, y0 - r, color);
    SSD1306_DrawPixel(x0 + r, y0, color);
    SSD1306_DrawPixel(x0 - r, y0, color);

    while (x < y) {
        if (f >= 0) {
            y--;
            ddfY += 2;
            f += ddfY;
        }
        x++;
        ddfX += 2;
        f += ddfX;

        SSD1306_DrawPixel(x0 + x, y0 + y, color);
        SSD1306_DrawPixel(x0 - x, y0 + y, color);
        SSD1306_DrawPixel(x0 + x, y0 - y, color);
        SSD1306_DrawPixel(x0 - x, y0 - y, color);

        SSD1306_DrawPixel(x0 + y, y0 + x, color);
        SSD1306_DrawPixel(x0 - y, y0 + x, color);
        SSD1306_DrawPixel(x0 + y, y0 - x, color);
        SSD1306_DrawPixel(x0 - y, y0 - x, color);
    }
}
